<resources>
    <string name="nc_settings_sign_out">Sign out</string>
    <string name="nc_settings_unit">Display unit (%1$s)</string>
    <string name="nc_settings_network">Network settings</string>
    <string name="nc_local_currency_data">Local currency (%1$s)</string>
    <string name="nc_security_settings">Security settings</string>
    <string name="nc_settings_change_password">Change password</string>
    <string name="nc_settings_replace_primary_key">Replace Primary Key</string>
    <string name="nc_settings_logged_in_devices">Logged-in devices</string>
    <string name="nc_settings_enable_sync">Multi-device sync (experimental)</string>
    <string name="nc_settings_delete_account">Delete account</string>
    <string name="nc_settings_about">About</string>
    <string name="nc_text_save">Save</string>
    <string name="nc_text_name">Name</string>
    <string name="nc_text_type_name_here">Type name here</string>
    <string name="nc_text_choose_existing_photo">Choose existing photo</string>
    <string name="nc_text_take_photo">Take photo</string>
    <string name="nc_text_remove_photo">Remove photo</string>
    <string name="nc_text_app_restart_required">App restart required</string>
    <string name="nc_text_app_restart_des">Changes to network settings require the app to restart.</string>
    <string name="nc_text_restart">Restart</string>
    <string name="nc_text_discard">Discard</string>
    <string name="nc_text_save_network_settings">Save network settings</string>
    <string name="nc_text_reset_to_default_network_settings">Reset to default network settings</string>
    <string name="nc_text_connect_to_electrum_server">Connect to Electrum server</string>
    <string name="nc_text_mainet_server">Mainnet server</string>
    <string name="nc_text_reset">Reset</string>
    <string name="nc_text_testnet_server">Testnet server</string>
    <string name="nc_txt_syncing_wallets_data">Syncing wallets data</string>
    <string name="nc_txt_sat_description">1 BTC = 100,000,000 sat</string>
    <string name="nc_txt_sat">satoshi</string>
    <string name="nc_txt_show_fixed_precision">Show fixed precision</string>
    <string name="nc_txt_guest">Guest</string>
    <string name="nc_settings_account_settings">Account settings</string>
    <string name="nc_account_delete_account_information"><![CDATA[We’ve sent a confirmation code to <b>%1$s</b>. Please enter the code below to confirm the deletion of this account]]></string>
    <string name="nc_user_device_bottom_sheet_sign_out"><![CDATA[ Sign out of <b>%1$s</b>]]></string>
    <string name="nc_user_device_bottom_sheet_mark_compromise"><![CDATA[ Mark <b>%1$s</b> as compromised]]></string>
    <string name="nc_txt_dialog_sign_out_message">Are you sure you want to sign out %1$s?</string>
    <string name="nc_txt_dialog_sign_out_all_message">Are you sure you want to sign out all devices?</string>
    <string name="nc_txt_dialog_compromised_message">Are you sure you want to mark %1$s as compromised? The device’s access to messages and wallets will be removed.</string>
    <string name="nc_text_device_deleted_msg">Please check your email to complete sign out %1$s</string>
    <string name="nc_text_device_compromised_msg">%1$s has been marked as compromised</string>
    <string name="nc_text_error_get_devices">Error while fetching device list</string>
    <string name="nc_text_signd_out_devices">Please check your email to complete sign out devices</string>
    <string name="nc_text_toolbar_title_user_devices">Logged in devices</string>
    <string name="nc_text_sign_out_all_devices">Sign out all devices</string>
    <string name="nc_text_device_info">(This device)</string>
    <string name="nc_text_signet_server">Signet server</string>
    <string name="nc_txt_explorer_address">Explorer Address</string>
    <string name="nc_settings_developer_mode">Developer settings</string>
    <string name="nc_invite_friends">Invite friends</string>
    <string name="nc_txt_debug_mode">Debug mode</string>
    <string name="nc_matrix_based_collaborative_wallet">Matrix-based collaborative wallet</string>
    <string name="nc_txt_sync_mode">Enable sync</string>
    <string name="nc_settings_sync_mode">Multi-device sync</string>
    <string name="nc_create_account_to_take_advantage">Create an account or sign in to unlock push notifications, multiple group wallets, and more.</string>
    <string name="nc_do_more_with_nunchuk">Do more with Nunchuk</string>
    <string name="nc_developer_log_file">Developer log file, use fileLog method</string>
    <string name="nc_clear_log">Clear log</string>
    <string name="nc_share_log">Share log</string>
    <string name="nc_display_unit">Display unit</string>
    <string name="nc_exchange_rate_unit">Exchange rate unit</string>
    <string name="nc_display_settings">Display settings</string>
    <string name="nc_fee_settings">Fee settings</string>
    <string name="nc_wallet_visibility_settings">Wallet visibility settings</string>
    <string name="nc_home_screen_settings">Home screen settings</string>
    <string name="nc_use_large_font_balances_home_screen">Use large font for balances</string>
    <string name="nc_display_total_balance_home_screen">Display total balance</string>
    <string name="nc_display_wallet_shortcut">Display wallet shortcuts</string>
    <string name="nc_display_wallet_shortcut_desc">Show send and receive shortcuts.</string>
    <string name="nc_applies_when_have_two_more_wallets">Applies when you have two or more wallets.</string>
    <string name="nc_follow_us">Follow us</string>
    <string name="nc_contact_us">Contact us</string>
    <string name="nc_change_email">Change email</string>
    <string name="nc_new_email">New email</string>
    <string name="scan_qr_to_sign_in_remotely">Scan QR to sign in remotely</string>
    <string name="nc_hide_wallet_details">Hide wallet details</string>
    <string name="nc_hide_wallet_details_desc">Hide your wallet balance, transaction amounts and addresses by default.</string>
    <string name="nc_protect_wallet_with_account_password">Protect wallets with account password</string>
    <string name="nc_protect_wallet_with_account_password_desc">Re-enter your account password for each wallet access.</string>
    <string name="nc_protect_wallet_with_account_passphrase">Protect wallets with account passphrase</string>
    <string name="nc_protect_wallet_with_account_passphrase_desc">Re-enter your account passphrase for each wallet access.</string>
    <string name="nc_protect_app_with_pin">Protect wallets with a Security PIN</string>
    <string name="nc_protect_app_with_pin_desc">Require a PIN for each app access.</string>
    <string name="nc_protect_wallets_with_fingerprint">Protect wallets with Fingerprint</string>
    <string name="nc_protect_wallets_with_fingerprint_desc">Require Fingerprint authentication for each app access.</string>
    <string name="nc_create_a_wallet_pin">Create a wallet PIN</string>
    <string name="nc_change_wallet_pin">Change wallet PIN</string>
    <string name="nc_create_pin">Create PIN</string>
    <string name="nc_confirm_pin_does_not_match">Confirm PIN does not match</string>
    <string name="nc_confirm_pin">Confirm Your PIN</string>
    <string name="nc_pin_created">PIN has been turned on</string>
    <string name="nc_pin_updated">PIN has been updated</string>
    <string name="nc_confirm_new_pin">Confirm your new PIN</string>
    <string name="nc_enter_new_pin">Your new PIN</string>
    <string name="nc_enter_current_pin">Your current PIN</string>
    <string name="nc_create_a_wallet_pin_desc">You\'ll need to enter your PIN each time you access the app, ensuring your wallets stay secure. [B]Be sure to back up this PIN—losing it could mean losing access to your wallets.[/B]</string>
    <string name="nc_local_currency">Local currency</string>
    <string name="nc_local_currency_updated">Local currency updated</string>
    <string name="nc_ssigner_primary_key_notification_title">Stay in the know</string>
    <string name="nc_ssigner_primary_key_notification_desc">Get notified when you receive new messages or alerts.</string>
    <string name="nc_ssigner_primary_key_turn_notification">Turn on notifications</string>
    <string name="nc_ssigner_primary_key_not_now">Not now</string>
    <string name="nc_byzantine">Byzantine</string>
    <string name="nc_byzantine_pro">Byzantine PRO</string>
    <string name="nc_byzantine_premier">Byzantine PREMIER</string>
    <string name="nc_network_setting_guide">For instructions on how to connect to your own node, please refer to this guide.</string>
    <string name="nc_finney">Finney</string>
    <string name="nc_finney_pro">Finney PRO</string>
    <string name="nc_multiple_plans">Multiple subscriptions</string>
    <string name="nc_select_mainnet_server">Select mainnet server</string>
    <string name="nc_mainnet_server">Mainnet server</string>
    <string name="nc_add_electrum_server">Add server</string>
    <string name="nc_server_list_updated">Server list updated</string>
    <string name="nc_server_added">Server added</string>
    <string name="nc_be_sure_back_up_security_pin">Be sure to back up this PIN—losing it could mean losing access to your wallets.</string>
    <string name="nc_your_pin">Your PIN</string>
    <string name="nc_try_again_after_seconds">Try again after %1$ds</string>
    <string name="nc_decoy_wallet_intro_desc">Decoy wallets are Bitcoin wallets designed to hold small amounts of bitcoin as a safeguard against attackers. This feature utilizes two separate PINs: [B]the Decoy PIN[/B] and [B]the Security PIN[/B].\n\nIn a threatening situation, you can use the Decoy PIN to access the decoy wallet, allowing you to hand it over and defuse the situation.\n\nTo access your main wallets, you’ll need to enter the Security PIN.</string>
    <string name="nc_decoy_pin_desc">Set up a Decoy PIN for alternate access to decoy wallets.[B] Be sure to back up this PIN—losing the Decoy PIN could mean losing access to your decoy wallets.[/B]</string>
    <string name="nc_decoy_wallet_intro_warning">To use the decoy wallet feature, you need to activate the Security PIN. The Security PIN protects access to your main (non-decoy) wallets. Would you like to enable it now?</string>
    <string name="nc_disable_pin_warning">This action requires disabling the Security PIN. Continue?</string>
    <string name="nc_text_disable_password">This action requires disabling the ‘Protect wallets with account password’ setting. Continue?</string>
    <string name="nc_text_disable_passphrase">This action requires disabling the ‘Protect wallets with account passphrase’ setting. Continue?</string>
    <string name="nc_decoy_pin_hint">The Decoy PIN is associated with the Guest account by default. If you’re currently signed in, entering the Decoy PIN will sign you out.</string>
    <string name="nc_decoy_pin_same_as_wallet_pin">This PIN has already been used.</string>
    <string name="nc_text_decoy_wallet_success">Decoy wallet successfully created!</string>
    <string name="nc_text_decoy_wallet_success_description">Tip: Keep a small amount of funds in your decoy wallet to make it appear authentic, which can help in threatening situations.  \nTo access the PIN entry screen, simply restart the app.</string>
    <string name="nc_text_decoy_pin_note">Notes about Decoy PIN</string>
    <string name="nc_using_decoy_pin_title">Using the Decoy PIN</string>
    <string name="nc_using_decoy_pin_for_signed_account_desc">When you enter the Decoy PIN, you\'ll be signed out and switched to Guest mode.[B]To regain access to your main wallets, you may need to sign back into your account after entering the Security PIN.[/B]</string>
    <string name="nc_disabling_pin_title">Disabling a PIN</string>
</resources>