<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nc_bottom_sheet_background"
    android:orientation="vertical"
    android:padding="@dimen/nc_padding_16"
    android:paddingBottom="300dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="90dp">

    <com.nunchuk.android.widget.NCFontTextView
        android:id="@+id/btnChooseAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_album"
        android:drawablePadding="@dimen/nc_padding_8"
        android:paddingHorizontal="@dimen/nc_padding_14"
        android:paddingVertical="@dimen/nc_padding_16"
        android:text="@string/nc_text_choose_existing_photo"
        android:textColor="@color/nc_text_primary"
        android:textSize="@dimen/nc_text_size_16"
        app:drawableTint="@color/nc_text_primary" />

    <com.nunchuk.android.widget.NCFontTextView
        android:id="@+id/btnTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawableStart="@drawable/ic_camera"
        android:drawablePadding="@dimen/nc_padding_8"
        android:padding="@dimen/nc_padding_16"
        android:text="@string/nc_text_take_photo"
        android:textColor="@color/nc_text_primary"
        android:textSize="@dimen/nc_text_size_16"
        app:drawableTint="@color/nc_text_primary" />

    <com.nunchuk.android.widget.NCFontTextView
        android:id="@+id/btnRemovePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawableStart="@drawable/ic_delete"
        android:drawablePadding="@dimen/nc_padding_8"
        android:padding="@dimen/nc_padding_16"
        android:text="@string/nc_text_remove_photo"
        android:textColor="@color/nc_red_color"
        android:textSize="@dimen/nc_text_size_16"
        app:drawableTint="@color/nc_red_color" />

</LinearLayout>