<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/nc_settings_developer_mode" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/nc_padding_16">

            <com.nunchuk.android.widget.NCFontTextView
                android:id="@+id/tvCollaborativeWallet"
                style="@style/NCText.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nc_padding_28"
                android:text="@string/nc_matrix_based_collaborative_wallet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.nunchuk.android.widget.NCSwitchButton
                android:id="@+id/switchCollaborativeWallet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/tvCollaborativeWallet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvCollaborativeWallet"
                app:sb_checked_color="@color/nc_primary_color" />

            <com.nunchuk.android.widget.NCFontTextView
                android:id="@+id/tvDebugMode"
                style="@style/NCText.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nc_padding_28"
                android:text="@string/nc_txt_debug_mode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchCollaborativeWallet" />

            <com.nunchuk.android.widget.NCSwitchButton
                android:id="@+id/switchDebugMode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/tvDebugMode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvDebugMode"
                app:sb_checked_color="@color/nc_primary_color" />

            <com.nunchuk.android.widget.NCFontTextView
                android:id="@+id/tv_enable_log"
                style="@style/NCText.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nc_padding_28"
                android:text="@string/nc_developer_log_file"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchDebugMode" />


            <com.nunchuk.android.widget.NCFontButton
                android:id="@+id/btn_clear_log"
                android:layout_width="0dp"
                style="@style/NCPrimaryButton.Dark"
                android:layout_marginTop="@dimen/nc_padding_16"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_share_log"
                android:text="@string/nc_clear_log"
                app:layout_constraintTop_toBottomOf="@+id/tv_enable_log"
                android:layout_marginEnd="@dimen/nc_padding_16"
                />

            <com.nunchuk.android.widget.NCFontButton
                android:id="@+id/btn_share_log"
                android:layout_width="0dp"
                style="@style/NCPrimaryButton.Dark"
                android:layout_height="wrap_content"
                android:text="@string/nc_share_log"
                android:layout_marginTop="@dimen/nc_padding_16"
                app:layout_constraintStart_toEndOf="@+id/btn_clear_log"
                app:layout_constraintTop_toBottomOf="@+id/tv_enable_log"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.nunchuk.android.widget.NCFontButton
                android:id="@+id/btn_clear_membership_step"
                android:layout_width="0dp"
                style="@style/NCPrimaryButton.Dark"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nc_padding_16"
                android:text="@string/nc_clear_membership_step"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_share_log" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>